...

                                                        Row(
                                                          mainAxisAlignment: MainAxisAlignment.end,
                                                          children: [
                                                            write == true ?
                                                            ElevatedButton(
                                                                key: Key('save'),
                                                                onPressed: () {
                                                                  setState(() {
                                                                    write = false;
                                                                    connectToWebSocket();
                                                                  });

...
                  BottomNavigationBarItem(
                    icon: Icon(Icons.home),
                    label: '',
                  ),
                  BottomNavigationBarItem(
                    icon: Icon(Icons.settings,
                        key: Key('button settings')),
                    label: '',
                  )
                ],
                currentIndex: currentIndex,
                onTap: (int index) {
                  setState(() {
...
